--- a/src/style.css
+++ b/src/style.css
@@ -30,3 +30,10 @@ button{
 .operator{
     background-color: orange;
 }
+.display{
+    width: 100%;
+    height: 80px;
+    border: 2px solid white;
+    color: white;
+    margin-bottom: 20px;
+}
