--- a/src/style.css
+++ b/src/style.css
@@ -31,9 +31,15 @@ button{
     background-color: orange;
 }
 .display{
+    display: flex;
     width: 100%;
     height: 80px;
     border: 2px solid white;
     color: white;
     margin-bottom: 20px;
+    text-align: center;
+    font-size: 3rem;
+    justify-content: flex-end;
+    padding-top: 10px;
+    padding-right: 10px;
 }
